UX/UI Overhaul: Dark theme, Homepage redesign, SEO/AIO improvements, and asset reorganization

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary Meta Tags -->
-  <title>ICON Entertainmentz - Premier Indian Cultural Events | Austin, Texas</title>
-  <meta name="title" content="ICON Entertainmentz - Premier Indian Cultural Events | Austin, Texas" />
+  <title>ICON Entertainmentz - Premier Indian Cultural Events</title>
+  <meta name="title" content="ICON Entertainmentz - Premier Indian Cultural Events" />
   <meta name="description"
-    content="Experience authentic Indian entertainment with ICON Entertainmentz. Bollywood concerts, cultural festivals, and exclusive events across the USA. Book your tickets for unforgettable experiences in Austin, Texas and beyond." />
+    content="Experience authentic Indian entertainment with ICON Entertainmentz. Bollywood concerts, cultural festivals, and exclusive events across the USA." />
   <meta name="keywords"
-    content="ICON Entertainmentz, Indian events Austin, Bollywood concerts, cultural festivals, Indian entertainment USA, Austin events, Texas cultural events, Indian music concerts, festival tickets, entertainment booking" />
+    content="ICON Entertainmentz, Indian events Austin, Bollywood concerts, cultural festivals, Indian entertainment USA, Austin events" />
   <meta name="author" content="ICON Entertainmentz" />
-  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+  <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://icon-entertainmentz.com" />
 
   <!-- Open Graph / Facebook -->
